--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,42 @@
+adium-theme-ubuntu==0.3.4
+apt-xapian-index==0.45
+chardet==2.0.1
+command-not-found==0.3
+debtagshw==0.1
+defer==1.0.6
+dirspec==13.10
+Django==1.7.4
+dnspython==1.11.1
+duplicity==0.6.23
+httplib2==0.8
+lockfile==0.8
 lpthw.web==1.1
-
+lxml==3.3.3
+oauthlib==0.6.1
+oneconf==0.3.7
+PAM==0.4.2
+pexpect==3.1
+Pillow==2.3.0
+piston-mini-client==0.7.5
+psycopg2==2.4.5
+pycrypto==2.6.1
+pycups==1.9.66
+pycurl==7.19.3
+pygobject==3.12.0
+pyOpenSSL==0.13
+pyserial==2.6
+pysmbc==1.0.14.1
+python-apt==0.9.3.5
+python-debian===0.1.21-nmu2ubuntu2
+pyxdg==0.25
+reportlab==3.0
+sessioninstaller==0.0.0
+six==1.5.2
+software-center-aptd-plugins==0.0.0
+system-service==0.1.6
+Twisted-Core==13.2.0
+Twisted-Web==13.2.0
+unity-lens-photos==1.0
+virtualenv==12.0.7
+xdiagnose===3.6.3build2
+zope.interface==4.0.5
