--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
  
 # command to install dependencies
 install:
-  - pip install .
+  - pip install
   - pip install -r requirements.txt 
   - pip install lpthw.web
 
