--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ install:
   - pip install lpthw.web
 
 # command to run tests
-script: python bin/post_form.py $PORT
+script: python bin/post_form.py 8080
