--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,12 @@ install:
   - pip install -r requirements.txt 
   - pip install lpthw.web
 
+# add PostgreSQL database
+addons:
+  postgresql: "9.3"
+  
+before_script:
+  - psql -c 'create database travis_ci_test;' -U postgres
+  
 # command to run tests
 script: python bin/post_form.py
