--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,24 @@
 language: python
+
 python:
   - "2.7"
   
-deploy:
-  provider: heroku
-  api_key: 2de4705a-1434-4c0f-b378-d58183479fac
-  app: rocky-spire-5172
-  on: master
-  run:
-    - "pip install -r requirements.txt"
-    - "pip install lpthw.web"
+env:
+  - lpthw.web
   
-# command to install dependencies
-#install:
-#  - pip install -r requirements.txt 
-#  - pip install lpthw.web
-
 # add PostgreSQL database
 addons:
   postgresql: "9.3"
   
+#command to install dependencies
+install:
+  - pip install -r requirements.txt 
+  - pip install lpthw.web
+  
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
+
   
 # command to run tests
 script: python bin/post_form.py
+
