--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
   - pip install lpthw.web
   
 before_script:
-  - psql -c 'create database travis_ci_test;' -U postgres
+  - psql -c 'create database subscribe;' -U postgres
 
   
 # command to run tests
