--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,9 @@
    
  #command to install dependencies
  install:
-   - pip install -r requirements.txt 
    - pip install lpthw.web
+   - pip install requests
+   - pip install -r requirements.txt 
    
  before_script:
    - psql -c 'create database travis_ci_test;' -U postgres
