--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,9 @@
  
    
  # command to run tests
- script: python tests/modelCragList_v1_test.py -v
- script: python tests/modelkbb_development_test.py -v
+ script: 
+   - python tests/modelCragList_v1_test.py -v
+   - python tests/modelkbb_development_test.py -v
 
 deploy:
   provider: heroku
