--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@
    - pip install lpthw.web
    - pip install requests
    - pip install BeautifulSoup4
+   - pip install lxml
    - pip install -r requirements.txt 
    
  before_script:
