--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@
    - pip install requests
    - pip install BeautifulSoup4
    - pip install lxml
+   - pip install testing.postgresql
+   - pip install sqlalchemy
    - pip install -r requirements.txt 
    
  before_script:
