--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@
    - pip install lxml
    - pip install testing.postgresql
    - pip install sqlalchemy
-   - pip install -r requirements.txt 
+   - pip install -r requirements.txt
+   - pip install coveralls
    
  before_script:
    - psql -c 'create database travis_ci_test;' -U postgres
@@ -31,6 +32,5 @@
    - python tests/modelkbb_development_test.py -v
    
 
-deploy:
-  provider: heroku
-  api_key: 2de4705a-1434-4c0f-b378-d58183479fac
+after_success:
+   coveralls
