--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,9 @@
    
  # command to run tests
  script: 
-   - python tests/modelCragList_development_test.py -v
    - python tests/modelkbb_development_test.py -v
+   - coverage run bin/modelCragList_v2_debug.py
+   - coverage run bin/modelkbb_v1_debug.py
    
 
 after_success:
