--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,8 @@
  # command to run tests
  script: 
    - python tests/modelkbb_development_test.py -v
-   - coverage run bin/modelCragList_v2_debug.py
-   - coverage run bin/modelkbb_v1_debug.py
+   - coverage run --source= bin/modelCragList_v2_debug.py test
+   - coverage run --source= bin/modelkbb_v1_debug.py test
    - coverage report -m
    
 
