--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@
    - pip install testing.postgresql
    - pip install sqlalchemy
    - pip install -r requirements.txt
+   - pip install coverage
    - pip install coveralls
    
  before_script:
