--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,6 @@
  # command to run tests
  script: 
    - python tests/modelkbb_development_test.py -v
-   - coverage run --source= bin/modelCragList_v2_debug.py test
-   - coverage run --source= bin/modelkbb_v1_debug.py test
-   
+   - coverage run --source=modelCragList_development_test,modelkbb_development_test setup.py test
+  
 after_success: coveralls
